# forest-utils

./: .gitignore  MANIFEST.in  README.md  VERSION.txt  setup.cfg  setup.py
.github/workflows/: upload_to_pypi.yml
forest_utils/: datasets.py  export_keras.py  export_spacy.py  export_transformers.py
forest_utils/test/: keras_test.html  spacy_test.html  test.py
src/forest_utils/: cli.py  datasets.py  export_keras.py  export_spacy.py  export_torch.py  export_transformers.py
src/forest_utils/utils/: create.py  pull.py
test/: result.json  test.py
